@@ -45,7 +45,7 @@ object Dependencies {
     val snowplowRawEvent = "0.1.0"
     val scalaUtil        = "0.1.0"
     val refererParser    = "0.2.0"
-    val maxmindGeoip     = "0.0.5"
+    val maxmindIplookups = "0.1.0-SNAPSHOT"
     val json4s           = "3.2.11-SNAPSHOT"
     val igluClient       = "0.1.0"
     // Scala (test only)
@@ -76,7 +76,7 @@ object Dependencies {
     val snowplowRawEvent = "com.snowplowanalytics"      %  "snowplow-thrift-raw-event" % V.snowplowRawEvent
     val scalaUtil        = "com.snowplowanalytics"      %  "scala-util"                % V.scalaUtil
     val refererParser    = "com.snowplowanalytics"      %  "referer-parser"            % V.refererParser
-    val maxmindGeoip     = "com.snowplowanalytics"      %% "scala-maxmind-geoip"       % V.maxmindGeoip
+    val maxmindIplookups = "com.snowplowanalytics"      %% "scala-maxmind-geoip"       % V.maxmindIplookups
     val json4sJackson    = "org.json4s"                 %% "json4s-jackson"            % V.json4s
     val json4sScalaz     = "org.json4s"                 %% "json4s-scalaz"             % V.json4s    
     val igluClient       = "com.snowplowanalytics"      %% "iglu-scala-client"         % V.igluClient
