@@ -15,6 +15,7 @@ Scala Hadoop Enrich: removed %3D handling for compatibility with old Scalding Ar
 Scala Common Enrich: bumped to 0.5.0                                                    - TODO (currently -SNAPSHOT)
 Scala Common Enrich: bumped user-agent-utils version, thanks @pkallos! (#662)
 Scala Common Enrich: bumped referer-parser to 0.2.0 (#864)
+Scala Common Enrich: bumped scala-maxmind-geoip to scala-maxmind-iplookups 0.1.0 (#882) - TODO (currently -SNAPSHOT)
 Scala Common Enrich: stored etl_tstamp in new field in CanonicalOutput (#818)
 Scala Common Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#836)
 Scala Common Enrich: made referer parsing configurable with list of internal domains (#857)
